--- a/analysis/applyflahr2onsimulations.Rmd
+++ b/analysis/applyflahr2onsimulations.Rmd
@@ -238,9 +238,12 @@ plot_grid(pic_list[[1]], pic_list[[2]],
 Can't apply `plot_grid` function, so in this report I plot the figures separately
 
 ```{r}
-for(i in 1:6){
-  pic_list[[i]]
-}
+pic_list[[1]]
+pic_list[[2]]
+pic_list[[3]]
+pic_list[[4]]
+pic_list[[5]]
+pic_list[[6]]
 ```
 
 ### intermediate sparse
@@ -340,9 +343,12 @@ plot_grid(pic_list[[1]], pic_list[[2]],
 Can't apply `plot_grid` function, so in this report I plot the figures separately
 
 ```{r}
-for(i in 1:6){
-  pic_list[[i]]
-}
+pic_list[[1]]
+pic_list[[2]]
+pic_list[[3]]
+pic_list[[4]]
+pic_list[[5]]
+pic_list[[6]]
 ```
 
 ## rank 3 case 
