--- a/analysis/GTEXzscoreTemplate.Rmd
+++ b/analysis/GTEXzscoreTemplate.Rmd
@@ -319,9 +319,19 @@ The approaches make sure we can get $(\hat{\sigma}_1^2,\cdots,\hat{\sigma}_j^2,\
 sfares = readRDS("../data/GTExdata/SFAres/sfaGTExzscore.rds")
 par(mfrow = c(2,3),mar=c(5.1,4.1,4.1,2.1)-1.9)
 for(k in 1:30){
-  barplot(sfares$F[,k],main = paste("factor",k))
+  barplot(sfares$F[k,],main = paste("factor",k))
 }
 
+```
+
+### SFA K=3
+
+```{r}
+g3 = readRDS('../data/GTExdata/SFAres/sfaK_3.rds')
+par(mfrow = c(1,3),mar=c(5.1,4.1,4.1,2.1)-1.9)
+for(k in 1:3){
+  barplot(g3$F[k,],main = paste("factor",k))
+}
 ```
 
 ### plot SFAmix result
@@ -332,7 +342,7 @@ dim(sfamixres$L)
 dim(sfamixres$F)
 ```
 
-this is only a rank one matrix.... I need check it.
+this is only a rank one matrix. I tried two time. two runs give rank one matrix.
 
 
 
