--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -54,3 +54,5 @@ Here is a example to run `flashr2` on RCC [RCC template](GTEXzscoreTemplate.html
 #### missing data imputation
 
 click here to check the template for [missing data imputation with OCV](templateforOCV.html)
+
+click here to check the comparison of different options for FLASH [different shrink options](compareOptionsOCV.Rmd)
