--- a/analysis/templateforOCV.Rmd
+++ b/analysis/templateforOCV.Rmd
@@ -269,7 +269,7 @@ sbatch OCV.sbatch
 
 ```{}
 T = 100
-results = matrix(NA,ncol = 4, nrow = T)
+results = matrix(NA,ncol = 22, nrow = T)
 for(i in 1:T){
   test_folder = paste("test", i, sep = "")
   out_folder = "NBSFAout"
@@ -318,6 +318,123 @@ pM = plot_res(ML_res,"Movie Lens data")
 
 ```{r}
 gridExtra::grid.arrange(pp,pd,pg,pb,pM, layout_matrix = rbind(c(1,NA,2),c(NA,5,NA),c(4,NA,3)))
+```
+
+## code for the tuning parameters from OCV only change one parameter
+
+try this one later.....
+
+```{r}
+CVPMD_softImpute=function(Y,c_s,K,fold = 10, method = "PMD",N_sim = 10){
+  N = dim(Y)[1]
+  P = dim(Y)[2]
+  colindex = matrix(sample(P,P),ncol = fold)
+  rowindex = matrix(sample(N,N),ncol = fold)
+  
+  missing= array(0,dim = c(fold,N,P))
+  foldindex = array(0,dim = c(fold,fold,2))
+  for(i in 1:fold){
+    for(j in 1:fold){
+      foldindex[i,j,1] = i
+      foldindex[i,j,2] = (i+j) %% fold
+    }
+  }
+  foldindex[which(foldindex == 0)] = fold
+  for(i in 1:fold){
+    missing[i, , ] = Y
+    for(j in 1:fold){
+      missing[i,rowindex[,foldindex[j,i,1]],colindex[,foldindex[j,i,2]]] = NA
+    }
+  }
+  # c_s is the candicate of shrinkage parameter
+  n_s = length(c_s)
+  # rmse for each grids
+  CVRMSE = rep(0,n_s)
+  minrmse = Inf
+  opt_s = 0
+  # for each candidate, we run it N_sim times
+  for(t_s in 1:n_s){
+    # for each grid
+    for(iter in 1:N_sim){
+      # each time we set the rmse to zeros
+      rmse = rep(0,fold)
+      for(i in 1:fold){
+        if(method == "PMD"){
+          out = PMD(missing[i,,], sumabs = c_s[t_s], sumabsv = NULL, sumabsu = NULL,K = K)
+          # out = PMD(missing[i,,], K = K)
+        }else{
+          out = softImpute(Y, rank.max = K,lambda = c_s[t_s]) 
+        }
+        misshat = out$u %*%  diag(out$d) %*% t(out$v)
+        for(j in 1:fold){
+          rmse[i] = rmse[i] + sum((Y[rowindex[,foldindex[j,i,1]],colindex[,foldindex[j,i,2]]] - 
+                                     misshat[rowindex[,foldindex[j,i,1]],colindex[,foldindex[j,i,2]]])^2)
+        }
+      } #get the result for one run
+      print(sqrt(sum(rmse)/(N*P)))
+      CVRMSE[t_s] = CVRMSE[t_s] + sqrt(sum(rmse)/(N*P))
+    }
+    if(CVRMSE[t_s] < minrmse){
+      minrmse = CVRMSE[t_s]
+      opt_s = c_s[t_s]
+    }
+  }
+  CVRMSE = CVRMSE/N_sim
+  return(list(opt_s = opt_s, output = CVRMSE))
+}
+
+PMA.wrapper = function(Y,ngrids = 10,K,fold = 10){
+  library(PMA)
+  N = dim(Y)[1]
+  P = dim(Y)[2]
+  c_s = seq(0.2,0.99,len=ngrids)
+  cvout = CVPMD_softImpute(Y,c_s,K ,fold , method = "PMD")
+  out = PMD(Y,sumabsu = NULL, sumabsv = NULL, sumabs = cvout$opt_s ,K = K)
+  residual_PMD = Y -  out$u %*%  diag(out$d) %*% t(out$v)
+  return(list(d = out$d, u = out$u, v = out$v, residual = residual_PMD))
+}
+
+softImpute.wrapper = function(Y,ngrids = 10,K,fold = 10){
+  library(softImpute)
+  N = dim(Y)[1]
+  P = dim(Y)[2]
+  c_s = seq(0,10,len=ngrids)
+  cvout = CVPMD_softImpute(Y,c_s,K ,fold , method = "softImpute")
+  out = softImpute(Y, rank.max = K,lambda = cvout$opt_s) 
+  residual_softImpute = Y -  out$u %*%  diag(out$d) %*% t(out$v)
+  return(list(d = out$d, u = out$u, v = out$v, residual = residual_softImpute))
+}
+```
+
+
+#### new reuslt 
+
+```{r}
+library(ggplot2)
+plot_res = function(output,title = "data",legend_position = "none"){
+  rmse = as.vector(output)
+  N = dim(output)[1]
+  pmd_c = sapply(seq(1,10),function(x){paste("PMD",x)})
+  softImpute_c = sapply(seq(1,10),function(x){paste("SF",x)})
+  methods = rep(c("flash","NBSFA",pmd_c,softImpute_c), each = N)
+  df = data.frame(RMSE = rmse, Method = methods )
+  p<-ggplot(df, aes(x=Method, y=RMSE, color=Method)) +
+  geom_boxplot()+
+  # geom_violin()+
+  ggtitle(title) +  theme_bw()+
+    theme(legend.position= legend_position, legend.text=element_text(size=15), axis.text.y = element_text(size =6))
+  p
+}
+```
+
+
+```{r}
+PT_res = readRDS("../data/missingvalue/box_res_grids_sf_pmd/denoiseTumor_box.rds")
+pt = plot_res(PT_res,"Tumor data")
+pt
+PT_res = readRDS("../data/missingvalue/box_res_grids_sf_pmd/TEXT_prsdt_box.rds")
+pp = plot_res(PT_res,"Text data")
+pp
 ```
 
 ## Session information
