--- a/analysis/templateforOCV.Rmd
+++ b/analysis/templateforOCV.Rmd
@@ -45,6 +45,87 @@ here we use the file 'example.mat'. the reason we use `.mat` file is because the
 ### wrapper function for OCV
 
 ```{r}
+CVPMD_softImpute=function(Y,c_s,K,fold = 10, method = "PMD"){
+  N = dim(Y)[1]
+  P = dim(Y)[2]
+  colindex = matrix(sample(P,P),ncol = fold)
+  rowindex = matrix(sample(N,N),ncol = fold)
+
+  missing= array(0,dim = c(fold,N,P))
+  foldindex = array(0,dim = c(fold,fold,2))
+  for(i in 1:fold){
+    for(j in 1:fold){
+      foldindex[i,j,1] = i
+      foldindex[i,j,2] = (i+j) %% fold
+    }
+  }
+  foldindex[which(foldindex == 0)] = fold
+  for(i in 1:fold){
+    missing[i, , ] = Y
+    for(j in 1:fold){
+      missing[i,rowindex[,foldindex[j,i,1]],colindex[,foldindex[j,i,2]]] = NA
+    }
+    missing[i,,which(colSums(missing[i,,],na.rm = T) ==0)] = Y[,which(colSums(missing[i,,],na.rm = T) ==0)]
+  }
+  # c_s is the candicate of shrinkage parameter
+  n_s = length(c_s)
+  # rmse for each grids
+  CVRMSE = rep(0,n_s)
+  minrmse = Inf
+  opt_s = 0
+  # for each candidate, we run it N_sim times
+  for(t_s in 1:n_s){
+    # for each grid
+    # each time we set the rmse to zeros
+    rmse = rep(0,fold)
+    for(i in 1:fold){
+      if(method == "PMD"){
+        res_log = capture.output({out = PMD(missing[i,,], sumabs = c_s[t_s], sumabsv = NULL, sumabsu = NULL,K = K)})
+      }else{
+        out = softImpute(missing[i,,], rank.max = K,lambda = c_s[t_s])
+      }
+      if(length(out$d)==1){
+        misshat = (out$d) * out$u %*% t(out$v)
+      }else{
+        misshat = out$u %*%  diag(out$d) %*% t(out$v)
+      }
+      for(j in 1:fold){
+        # for each fold j
+        rmse[i] = rmse[i] + sum((Y[rowindex[,foldindex[j,i,1]],colindex[,foldindex[j,i,2]]] -
+                                   misshat[rowindex[,foldindex[j,i,1]],colindex[,foldindex[j,i,2]]])^2,na.rm = TRUE)
+      }
+    } #get the result for one run
+    CVRMSE[t_s] = CVRMSE[t_s] + sqrt(sum(rmse)/(N*P))
+    if(CVRMSE[t_s] < minrmse){
+      minrmse = CVRMSE[t_s]
+      opt_s = c_s[t_s]
+    }
+  }
+  return(list(opt_s = opt_s, output = CVRMSE))
+}
+
+
+PMA.wrapper = function(Y,ngrids = 10,K,fold = 10){
+  library(PMA)
+  N = dim(Y)[1]
+  P = dim(Y)[2]
+  c_s = seq(0.3,0.8,len=ngrids)
+  cvout = CVPMD_softImpute(Y,c_s,K ,fold , method = "PMD")
+  res_log = capture.output({out = PMD(Y,sumabsu = NULL, sumabsv = NULL, sumabs = cvout$opt_s ,K = K)})
+  return(list(d = out$d, u = out$u, v = out$v))
+}
+
+softImpute.wrapper = function(Y,ngrids = 10,K,fold = 10){
+  library(softImpute)
+  N = dim(Y)[1]
+  P = dim(Y)[2]
+  c_s = seq(0,100,len=ngrids)
+  cvout = CVPMD_softImpute(Y,c_s,K ,fold , method = "softImpute")
+  out = softImpute(Y, rank.max = K,lambda = cvout$opt_s)
+  return(list(d = out$d, u = out$u, v = out$v))
+}
+
+
 OCV_index=function(Y,k_fold = 5){
   N = dim(Y)[1]
   P = dim(Y)[2]
@@ -76,6 +157,7 @@ OCV_data = function(Y,OCVindex,k_fold = 5){
     for(j in 1:k_fold){
       missing[i,rowindex[,foldindex[j,i,1]],colindex[,foldindex[j,i,2]]] = NA
     }
+    missing[i,,which(colSums(missing[i,,],na.rm = T) ==0)] = Y[,which(colSums(missing[i,,],na.rm = T) ==0)]
   }
   return(missing)
 }
@@ -92,7 +174,7 @@ OCV_SSE = function(Y,OCVindex,OCVdata,k_fold = 5,method = "flash",Kmax = 50){
     miss_hat = call_method(missing[i,,], method = method, Kmax = Kmax)
     for(j in 1:k_fold){
       SSE[i] = SSE[i] + sum((Y[rowindex[,foldindex[j,i,1]],colindex[,foldindex[j,i,2]]] -
-                               miss_hat[rowindex[,foldindex[j,i,1]],colindex[,foldindex[j,i,2]]])^2)
+                               miss_hat[rowindex[,foldindex[j,i,1]],colindex[,foldindex[j,i,2]]])^2,na.rm = TRUE)
     }
   }
   RMSE = sqrt(sum(SSE)/(dim(Y)[1] * dim(Y)[2]))
@@ -102,16 +184,45 @@ OCV_SSE = function(Y,OCVindex,OCVdata,k_fold = 5,method = "flash",Kmax = 50){
 call_method = function(Y_data,method,Kmax = 50){
   if(method == "flash"){
     data = flashr2::flash_set_data(Y_data)
-    f_greedy = flashr2::flash_add_greedy(data,Kmax=Kmax,ash_param=list(method = "fdr"),var_type = "constant")
+    # f_greedy = flashr2::flash_add_greedy(data,Kmax=Kmax,var_type = "constant")
+    f_greedy = flashr2::flash_add_greedy(data,Kmax=Kmax)
     Y_hat = f_greedy$EL %*% t(f_greedy$EF)
+  }else if(method == "flash_wn"){
+    data = flashr2::flash_set_data(Y_data)
+    # f_greedy = flashr2::flash_add_greedy(data,Kmax=Kmax,var_type = "constant",nullcheck=FALSE)
+    f_greedy = flashr2::flash_add_greedy(data,Kmax=Kmax,nullcheck=FALSE)
+    Y_hat = f_greedy$EL %*% t(f_greedy$EF)
+  }else if(method == "flash_bf"){
+    data = flashr2::flash_set_data(Y_data)
+    # f_greedy = flashr2::flash_add_greedy(data,Kmax=Kmax,var_type = "constant")
+    # f = flashr2::flash_backfit(data,f_greedy,var_type = "constant")
+    f_greedy = flashr2::flash_add_greedy(data,Kmax=Kmax)
+    f = flashr2::flash_backfit(data,f_greedy)
+    Y_hat = f$EL %*% t(f$EF)
   }else if(method == "PMD"){
-    out = PMA::PMD(Y_data, K = Kmax)
-    Y_hat =  out$u %*% diag(out$d) %*% t(out$v)
+    res_log = capture.output({out = PMA.wrapper(Y_data,ngrids = 10,K = Kmax,fold = 10)})
+    if(length(out$d)==1){
+      Y_hat =  (out$d) * out$u %*% t(out$v)
+    }else{
+      Y_hat =  out$u %*% diag(out$d) %*% t(out$v)
+    }
+  }else if(method == 'PN'){
+    library(ebnm)
+    library(flashr2)
+    data = flashr2::flash_set_data(Y_data)
+    # f_greedy = flashr2::flash_add_greedy(data,Kmax=Kmax,ebnm_fn = ebnm_pn,var_type = "constant")
+    f_greedy = flashr2::flash_add_greedy(data,Kmax=Kmax,ebnm_fn = ebnm_pn)
+    Y_hat = f_greedy$EL %*% t(f_greedy$EF)
   }else if(method == "softImpute"){
-    gsoft = softImpute(Y_data, rank.max = Kmax)
-    Y_hat =  gsoft$u %*% diag(gsoft$d) %*% t(gsoft$v)
+    gsoft = try(softImpute.wrapper(Y_data,ngrids = 10,K = Kmax,fold = 10))
+    if(length(gsoft$d)==1){
+      Y_hat =  try((gsoft$d) * gsoft$u %*% t(gsoft$v))
+    }else{
+      Y_hat =  try(gsoft$u %*% diag(gsoft$d) %*% t(gsoft$v))
+    }
   }else{
-    stop("the method is not implemented yet, please check it out")
+    # stop("the method is not implemented yet, please check it out")
+    Y_hat = matrix(0,ncol = dim(Y_data)[2],nrow = dim(Y_data)[1])
   }
   return(Y_hat)
 }
@@ -125,12 +236,11 @@ NSF_OCV = function(OCVindex){
 
   writeMat("./NBSFAout/OCVindex.mat", OCVindex = OCVindex)
 
-  system("matlab -nosplash -nodesktop -r \"addpath(\'~/HG/flash/data/OCVmissflashr2/Breastcancer\'); run(\'missvalue.m\');exit;\" ")
+  system("matlab -nosplash -nodesktop -r \"addpath(\'../\'); run(\'missvalue.m\');exit;\" ")
   g_nsfa = readMat("./NBSFAout/NSFAresult.mat")
   nsfa_rmse = as.vector(g_nsfa$RMSE)
   return(nsfa_rmse)
 }
-
 
 ```
 
@@ -139,21 +249,24 @@ Here you need change the `\"addpath(\'~/HG/flash/data/OCVmissflashr2/Breastcance
 ### matlab code 
 
 ```{}
-addpath('~/HG/flash/data/missingvalue/methods/NBSF/nsfa-master/');
+ddpath('~/HG/flash/data/missingvalue/methods/NBSF/nsfa-master/');
 addpath('~/HG/flash/data/missingvalue/methods/NBSF/nsfa-master/utils/');
 
 % you need to change the path and the data file (not centered)
-load ~/HG/flash/data/OCVmissflashr2/Breastcancer/example.mat;
-Ycentered=Y-repmat(mean(Y,2),1,size(Y,2));
+load ../Ydata.mat;
+Ycentered=Y;
 settings=defaultsettings();
 [settings.D,settings.N]=size(Ycentered);
 settings.iterations=100;
 % now the missing is decide by the this is the missing index.(or you can upload the missing matrix)
 
-load(fullfile(pwd,'NBSFAout/OCVindex.mat'))
+file_path = fullfile(pwd,'NBSFAout/OCVindex.mat');
+load(file_path);
 
-missindex = ones(settings.D,settings.N);
-k_fold = 5;
+% missindex = ones(settings.D,settings.N); this is not missing index this
+% is observed index.
+missindex = (~isnan(Y));
+k_fold = 10;
 foldindex = zeros(k_fold,k_fold,2);
 for k = 1:2
     for j = 1:k_fold
@@ -169,22 +282,23 @@ for i = 1:k_fold
     for j = 1:k_fold
         mvmask(OCVindex.rowindex(:,foldindex(j,i,1)),OCVindex.colindex(:,foldindex(j,i,2))) = 0;
     end
+    mvmask(:,sum(mvmask) == 0) = (missindex(:,sum(mvmask) == 0));
     initialsample=init_nsfa(settings);
     [finalsample,resultstable]=nsfa(Ycentered,mvmask,initialsample,settings);
     Y_hat = (finalsample.G *  finalsample.X);
     for j = 1:k_fold
         SSE(i) = SSE(i) + ...
-            sum(sum((Ycentered(OCVindex.rowindex(:,foldindex(j,i,1)),OCVindex.colindex(:,foldindex(j,i,2)))- ...
+            sum(nansum((Ycentered(OCVindex.rowindex(:,foldindex(j,i,1)),OCVindex.colindex(:,foldindex(j,i,2)))- ...
             Y_hat(OCVindex.rowindex(:,foldindex(j,i,1)),OCVindex.colindex(:,foldindex(j,i,2)))).^2));
     end
 
 end
 
-RMSE = sqrt(sum(SSE)/(settings.D*settings.N));
+RMSE = sqrt(sum(SSE)/(100000));
 RMSE;
 
 save_path = fullfile(pwd,'NBSFAout/NSFAresult');
-save(save_path,'RMSE'); 
+save(save_path,'RMSE');
 ```
 
 you need change the path as well. this file name is 'missvalue.m'
@@ -194,26 +308,28 @@ you need change the path as well. this file name is 'missvalue.m'
 In this case, we have problem in running `flashr2` on RCC. so we just try other methods first.
 
 ```{}
+source("../wrapper.R")
 library(R.matlab)
 ## run the code
-Y_centered = readMat("~/HG/flash/data/OCVmissflashr2/Breastcancer/example.mat")
+Y_centered = readMat("../example.mat")
 Y = Y_centered$Y
 # in the matlab package of NSF, the use the centered data by rows
 N = dim(Y)[1]
 P = dim(Y)[2]
 Y = Y - rowMeans(Y) %*% t(rep(1,P))
-OCVindex = OCV_index(Y,k_fold = 5)
-OCVdata = OCV_data(Y,OCVindex,k_fold = 5)
-soft_rmse = OCV_SSE(Y,OCVindex,OCVdata,k_fold = 5,method = "softImpute",Kmax = 50)
-# flashG_rmse = OCV_SSE(Y,OCVindex,OCVdata,k_fold = 5,method = "flash",Kmax = 50)
-pmd_rmse = OCV_SSE(Y,OCVindex,OCVdata,k_fold = 5,method = "PMD",Kmax = 50)
+OCVindex = OCV_index(Y,k_fold = 10)
+OCVdata = OCV_data(Y,OCVindex,k_fold = 10)
+
+PN_rmse = OCV_SSE(Y,OCVindex,OCVdata,k_fold = 10,method = "PN",Kmax = 40)
+flashG_rmse = OCV_SSE(Y,OCVindex,OCVdata,k_fold = 10,method = "flash",Kmax = 40)
+flashGwn_rmse = OCV_SSE(Y,OCVindex,OCVdata,k_fold = 10,method = "flash_wn",Kmax = 40)
+flashB_rmse = OCV_SSE(Y,OCVindex,OCVdata,k_fold = 10,method = "flash_bf",Kmax = 40)
+pmd_rmse = OCV_SSE(Y,OCVindex,OCVdata,k_fold = 10,method = "PMD",Kmax = 40)
+soft_rmse = OCV_SSE(Y,OCVindex,OCVdata,k_fold = 10,method = "softImpute",Kmax = 40)
 nsfa_rmse = NSF_OCV(OCVindex)
-flashG_rmse = mean(c( nsfa_rmse,pmd_rmse,soft_rmse))
 
-result = c(flashG_rmse, nsfa_rmse,pmd_rmse,soft_rmse)
+result = c(PN_rmse,flashG_rmse,flashGwn_rmse,flashB_rmse,nsfa_rmse,pmd_rmse,soft_rmse)
 saveRDS(result, "./NBSFAout/output.rds")
-
-
 ```
 
 this file name is `runOCV.R`
@@ -230,24 +346,25 @@ mkdir outlog
 #!/bin/bash
 
 #SBATCH --job-name=arrayJob
-#SBATCH --output=/home/weidong/HG/flash/data/OCVmissflashr2/Breastcancer/outlog/arrayJob_%A_%a.out
-#SBATCH --error=/home/weidong/HG/flash/data/OCVmissflashr2/Breastcancer/outlog/arrayJob_%A_%a.err
-#SBATCH --array=1-100
-#SBATCH --time=06:00:00
-#SBATCH --partition=broadwl
+#SBATCH --output=./outlog/arrayJob_%A_%a.out
+#SBATCH --error=./outlog/arrayJob_%A_%a.err
+#SBATCH --array=1-20
+#SBATCH --time=26:00:00
+#SBATCH --partition=mstephens
 #SBATCH --ntasks=1
-#SBATCH --mem-per-cpu=2000
-
+#SBATCH --mem-per-cpu=8000
 
 ######################
 # Begin work section #
 ######################
 
 # Print this sub-job's task ID
-cd /home/weidong/HG/flash/data/OCVmissflashr2/Breastcancer
+module load R
+module load matlab
+
 mkdir test${SLURM_ARRAY_TASK_ID}
 cd test${SLURM_ARRAY_TASK_ID}
-Rscript --verbose /home/weidong/HG/flash/data/OCVmissflashr2/Breastcancer/runOCV.R
+Rscript --verbose ../runOCV.R
 ```
 
 this file is name as `OCV.sbatch`
@@ -268,8 +385,8 @@ sbatch OCV.sbatch
 ## to get the result
 
 ```{}
-T = 100
-results = matrix(NA,ncol = 22, nrow = T)
+T = 20
+results = matrix(NA,ncol = 7, nrow = T)
 for(i in 1:T){
   test_folder = paste("test", i, sep = "")
   out_folder = "NBSFAout"
@@ -286,10 +403,11 @@ saveRDS(results,"./boxplot.rds")
 
 ```{r}
 library(ggplot2)
-plot_res = function(output,title = "data",legend_position = "none"){
+plot_res = function(output,title = "data",legend_position = "none", x_label){
   rmse = as.vector(output)
   N = dim(output)[1]
-  methods = rep(c("flash","NBSFA","PMD","softImpute"), each = N)
+  # methods = rep(c("flash","NBSFA","PMD","softImpute"), each = N)
+  methods = rep(x_label, each = N)
   df = data.frame(RMSE = rmse, Method = methods )
   p<-ggplot(df, aes(x=Method, y=RMSE, color=Method)) +
   geom_boxplot()+
@@ -298,19 +416,19 @@ plot_res = function(output,title = "data",legend_position = "none"){
     theme(legend.position= legend_position, legend.text=element_text(size=15), axis.text.y = element_text(size =6))
   p
 }
-
+x_label = c("flash","NBSFA","PMD","softImpute")
 PT_res = readRDS("../data/missingvalue/OCVtemplate/RCCres/president_box.rds")
-pp = plot_res(PT_res,"Text data")
+pp = plot_res(PT_res,"Text data",x_label = x_label)
 DT_res = readRDS("../data/missingvalue/OCVtemplate/RCCres/denoiseRtumor_box.rds")
-pd = plot_res(DT_res,"Tumor data")
+pd = plot_res(DT_res,"Tumor data",x_label = x_label)
 GZ_res = readRDS("../data/missingvalue/OCVtemplate/RCCres/gtexzscore_box.rds")
-pg = plot_res(GZ_res,"GTEx data")
+pg = plot_res(GZ_res,"GTEx data",x_label = x_label)
 BC_res = readRDS("../data/missingvalue/OCVtemplate/RCCres/BreastCancer_box.rds")
-pb = plot_res(BC_res,"Breast Cancer data")
+pb = plot_res(BC_res,"Breast Cancer data",x_label = x_label)
 ML_res = readRDS("../data/missingvalue/OCVtemplate/RCCres/ML100K_box.rds")
 ML_res[c(2,13,17,21,29,37,62,76,77,93,95,100),] = NA
 ML_res = matrix(as.numeric(ML_res),ncol = 4)
-pM = plot_res(ML_res,"Movie Lens data")
+pM = plot_res(ML_res,"Movie Lens data",x_label = x_label)
 ```
 
 
@@ -320,125 +438,65 @@ pM = plot_res(ML_res,"Movie Lens data")
 gridExtra::grid.arrange(pp,pd,pg,pb,pM, layout_matrix = rbind(c(1,NA,2),c(NA,5,NA),c(4,NA,3)))
 ```
 
-## code for the tuning parameters from OCV only change one parameter
-
-try this one later.....
+## results for different tuning parameters
 
 ```{r}
-CVPMD_softImpute=function(Y,c_s,K,fold = 10, method = "PMD",N_sim = 10){
-  N = dim(Y)[1]
-  P = dim(Y)[2]
-  colindex = matrix(sample(P,P),ncol = fold)
-  rowindex = matrix(sample(N,N),ncol = fold)
-  
-  missing= array(0,dim = c(fold,N,P))
-  foldindex = array(0,dim = c(fold,fold,2))
-  for(i in 1:fold){
-    for(j in 1:fold){
-      foldindex[i,j,1] = i
-      foldindex[i,j,2] = (i+j) %% fold
-    }
-  }
-  foldindex[which(foldindex == 0)] = fold
-  for(i in 1:fold){
-    missing[i, , ] = Y
-    for(j in 1:fold){
-      missing[i,rowindex[,foldindex[j,i,1]],colindex[,foldindex[j,i,2]]] = NA
-    }
-  }
-  # c_s is the candicate of shrinkage parameter
-  n_s = length(c_s)
-  # rmse for each grids
-  CVRMSE = rep(0,n_s)
-  minrmse = Inf
-  opt_s = 0
-  # for each candidate, we run it N_sim times
-  for(t_s in 1:n_s){
-    # for each grid
-    for(iter in 1:N_sim){
-      # each time we set the rmse to zeros
-      rmse = rep(0,fold)
-      for(i in 1:fold){
-        if(method == "PMD"){
-          out = PMD(missing[i,,], sumabs = c_s[t_s], sumabsv = NULL, sumabsu = NULL,K = K)
-          # out = PMD(missing[i,,], K = K)
-        }else{
-          out = softImpute(Y, rank.max = K,lambda = c_s[t_s]) 
-        }
-        misshat = out$u %*%  diag(out$d) %*% t(out$v)
-        for(j in 1:fold){
-          rmse[i] = rmse[i] + sum((Y[rowindex[,foldindex[j,i,1]],colindex[,foldindex[j,i,2]]] - 
-                                     misshat[rowindex[,foldindex[j,i,1]],colindex[,foldindex[j,i,2]]])^2)
-        }
-      } #get the result for one run
-      print(sqrt(sum(rmse)/(N*P)))
-      CVRMSE[t_s] = CVRMSE[t_s] + sqrt(sum(rmse)/(N*P))
-    }
-    if(CVRMSE[t_s] < minrmse){
-      minrmse = CVRMSE[t_s]
-      opt_s = c_s[t_s]
-    }
-  }
-  CVRMSE = CVRMSE/N_sim
-  return(list(opt_s = opt_s, output = CVRMSE))
-}
-
-PMA.wrapper = function(Y,ngrids = 10,K,fold = 10){
-  library(PMA)
-  N = dim(Y)[1]
-  P = dim(Y)[2]
-  c_s = seq(0.2,0.99,len=ngrids)
-  cvout = CVPMD_softImpute(Y,c_s,K ,fold , method = "PMD")
-  out = PMD(Y,sumabsu = NULL, sumabsv = NULL, sumabs = cvout$opt_s ,K = K)
-  residual_PMD = Y -  out$u %*%  diag(out$d) %*% t(out$v)
-  return(list(d = out$d, u = out$u, v = out$v, residual = residual_PMD))
-}
-
-softImpute.wrapper = function(Y,ngrids = 10,K,fold = 10){
-  library(softImpute)
-  N = dim(Y)[1]
-  P = dim(Y)[2]
-  c_s = seq(0,10,len=ngrids)
-  cvout = CVPMD_softImpute(Y,c_s,K ,fold , method = "softImpute")
-  out = softImpute(Y, rank.max = K,lambda = cvout$opt_s) 
-  residual_softImpute = Y -  out$u %*%  diag(out$d) %*% t(out$v)
-  return(list(d = out$d, u = out$u, v = out$v, residual = residual_softImpute))
-}
-```
-
-
-#### new reuslt 
-
-```{r}
-library(ggplot2)
-plot_res = function(output,title = "data",legend_position = "none"){
-  rmse = as.vector(output)
-  N = dim(output)[1]
-  pmd_c = sapply(seq(1,10),function(x){paste("PMD",x)})
-  softImpute_c = sapply(seq(1,10),function(x){paste("SF",x)})
-  methods = rep(c("flash","NBSFA",pmd_c,softImpute_c), each = N)
-  df = data.frame(RMSE = rmse, Method = methods )
-  p<-ggplot(df, aes(x=Method, y=RMSE, color=Method)) +
-  geom_boxplot()+
-  # geom_violin()+
-  ggtitle(title) +  theme_bw()+
-    theme(legend.position= legend_position, legend.text=element_text(size=15), axis.text.y = element_text(size =6))
-  p
-}
-```
-
-
-```{r}
+pmd_c = sapply(seq(1,10),function(x){paste("PMD",x)})
+softImpute_c = sapply(seq(1,10),function(x){paste("SF",x)})
+x_label= c("flash","NBSFA",pmd_c,softImpute_c)
 PT_res = readRDS("../data/missingvalue/box_res_grids_sf_pmd/denoiseTumor_box.rds")
-pt = plot_res(PT_res,"Tumor data")
+pt = plot_res(PT_res,"Tumor data",x_label = x_label)
 pt
 PT_res = readRDS("../data/missingvalue/box_res_grids_sf_pmd/TEXT_prsdt_box.rds")
-pp = plot_res(PT_res,"Text data")
+pp = plot_res(PT_res,"Text data",x_label = x_label)
 pp
-PT_res = readRDS("../data/missingvalue/box_res_grids_sf_pmd/BreastCancer_box.rds")
-pb = plot_res(PT_res,"Text data")
+```
+
+
+## use OCV choose the tuning parameters
+
+### Breast Cancer data
+
+we use 10 grids for `softImpute` and `PMD`
+
+```{r}
+PB_res = readRDS("../data/missingvalue/testingcode/box_Breast.rds")
+x_label= c("PN","flashG","flashGwn","flashB","nsfa","pmd","soft")
+pb = plot_res(PB_res,"Breast Cancer data",x_label = x_label)
 pb
 ```
+
+we take the 'flashB' away to compare the rest.
+
+```{r}
+x_label= c("PN","flashG","flashGwn","nsfa","pmd","soft")
+pb = plot_res(PB_res[,-4],"Breast Cancer data",x_label = x_label)
+pb
+```
+
+### denoiseR Tumor data
+
+we use 10 grids for `softImpute` and `PMD`
+
+```{r}
+PT_res = readRDS("../data/missingvalue/testingcode/box_denoiseTumor.rds")
+x_label= c("PN","flashG","flashGwn","flashB","nsfa","pmd","soft")
+pt = plot_res(PT_res,"Tumor data",x_label = x_label)
+pt
+```
+
+### text data
+
+in this data, we add `zero` as use zero values as imputation to compare with other methods.
+
+```{r}
+PT_res = readRDS("../data/missingvalue/testingcode/box_president.rds")
+x_label= c("PN","flashG","flashGwn","flashB","nsfa","pmd","soft","zero")
+pt = plot_res(PT_res,"Text data",x_label = x_label)
+pt
+```
+
+
 
 ## Session information
 
